[package]
name = "nucleus-http"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
enum-map = "2.5.0"
log = "0.4.17"
rustls-pemfile = "1.0.2" 
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"

[dev-dependencies]
argh = "0.1.10"
pretty_env_logger = "0.4.0"
acme-lib = "0.8.2"

[[example]]
name = "simple"

[[example]]
name = "tls"

[[example]]
name = "dynamic_route"

[[example]]
name = "post"
