[package]
name = "nucleus-http"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
base64 = "0.21.1"
enum-map = "2.5.0"
hmac = "0.12.1"
log = "0.4.17"
rand = "0.8.5"
rustls-pemfile = "1.0.2" 
secrecy = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"

[dev-dependencies]
argh = "0.1.10"
pretty_env_logger = "0.4.0"
acme-lib = "0.8.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
get-port = "4.0.0"

[[example]]
name = "simple"

[[example]]
name = "tls"

[[example]]
name = "dynamic_route"

[[example]]
name = "post"
